# hwpx-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  llms.txt  pnpm-lock.yaml  pyproject.toml  test-two-columns.js  tsconfig.base.json
.github/workflows/: gh-pages.yml  release.yml  tests.yml
DevDoc/OWPML SCHEMA/: Body XML schema.xml  Core XML schema.xml  Document History XML schema.xml  MasterPage XML schema.xml  ParaList XML schema.xml  Version XML schema.xml  validate-xsd.ps1
docs/: Makefile  api_reference.md  cli-ai-modernization-spec.md  conf.py  distribution-without-npm.md  examples.md  faq.md  index.md  installation.md  make.bat  quickstart.md  requirements.txt  schema-overview.md  usage.md
examples/: FormattingShowcase.hwpx  build_release_checklist.py  extract_text.py  find_objects.py  note_example.hwpx
scripts/: build-and-publish.sh
src/hwpx/: __init__.py  document.py  package.py  templates.py
src/hwpx/opc/: package.py
src/hwpx/oxml/: __init__.py  body.py  common.py  document.py  header.py  parser.py  schema.py  utils.py
src/hwpx/tools/: __init__.py  object_finder.py  text_extractor.py  validator.py
src/hwpx/tools/_schemas/: header.xsd  section.xsd
tests/: test_document_formatting.py  test_inline_models.py  test_integration_hwpx_compatibility.py  test_memo_and_style_editing.py  test_oxml_parsing.py  test_section_headers.py  test_tables_default_border.py  test_text_extractor_annotations.py
tests/fixtures/: header_with_full_refs.xml  header_with_memo.xml
